<resources>
    <string name="app_name">Homework #20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
</resources>